# StD

./: Makefile.am  README.md  configure.ac
src/: Makefile-LIBADD.inc  Makefile.am  libsimon.c  libsimon.pc.in  libsimon_config  simon-test.c  simon-test.pc.in  simon.h  simon.pc.in  simon_test_config  std-test.c  std.c  std.h
